# agent-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom_suite.yaml
src/agent_bench/: __init__.py  cli.py  core.py  custom.py  metrics.py  reports.py
src/agent_bench/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/agent_bench/suites/: __init__.py  base.py  coding.py  reasoning.py  tool_use.py  writing.py
tests/: fake_provider.py  test_metrics.py  test_runner.py  test_suites.py
